# cryptostalker

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  skaffold.yaml  workspace.code-workspace
kubernetes-manifests/: cryptostalker-aggregator.deployment.yaml  cryptostalker-aggregator.service.yaml  cryptostalker-binance.deployment.yaml  cryptostalker-huobi.deployment.yaml  cryptostalker-kraken.deployment.yaml
proto/: exchanges.proto  sync.proto
sql/exchanges/: add.sql  list.sql  table.sql
sql/markets/: sync.sql  table.sql
sql/trades/: insert.sql  table.sql
src/: db.rs  error.rs  exchanges.rs  grpc.rs  main.rs  metrics.rs  sync.rs
src/aggregator/: Cargo.toml  Dockerfile  build.rs
src/aggregator/src/: grpc.rs  interrupt.rs  main.rs  metrics.rs
src/aggregator/src/db/: macros.rs  mod.rs
src/aggregator/src/db/query/: insert_trade.sql
src/aggregator/src/db/schema/: trades.sql
src/aggregator/src/sync/: mod.rs  pb.rs
src/binance/: compileproto.sh  go.mod  go.sum  grpc_client.go  main.go  stream-pool.go  stream.go  sync.proto
src/bittrex/: DataConverter.cs  GrpcClient.cs  Market.cs  Program.cs  SocketClient.cs  SocketResponse.cs  TradeEvent.cs  bittrex.csproj  sync.proto
src/huobi/: Dockerfile  Program.cs  huobi.csproj  sync.proto
src/kraken/: Dockerfile  go.mod  go.sum  main.go  sync.pb.go  sync_grpc.pb.go
