[package]
name = "aggregator"
version = "0.1.0"
authors = ["Alexander Seferinkyn <alexandar.seferinkin@softwaregroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
tonic = { version = "0.4", default-features = false, features = ["transport", "codegen", "prost"] }
tokio = { version = "1.4.0", default-features = false, features = ["macros", "rt", "signal", "time"] }
prost = "0.7"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
dotenv = "0.15.0"
hyper = "0.14"
prometheus = { version = "0.12.0", features = ["process"] }

[build-dependencies]
tonic-build = "0.4"
